# vicinity

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  simple_video_stream.cpp
example/finger_counting/: color_sampler.cpp  color_sampler.hpp  contour_detector.cpp  contour_detector.hpp  convexity_detector.cpp  convexity_detector.hpp  finger_counting.cpp  sample_thresholding.cpp  sample_thresholding.hpp  side_by_side_displayer.cpp  side_by_side_displayer.hpp
example/hot_swap_processor/: hot_swap_processor.cpp
example/simple_video_stream/: simple_video_stream.cpp
src/: CMakeLists.txt
src/main/: main.cpp
src/pipeline_core/: pipeline.cpp  pipeline_context.cpp  processor_base.cpp  processor_context.cpp  processor_instance.cpp
src/pipeline_core/include/: pipeline.hpp  pipeline_context.hpp  pipeline_signal.hpp  pipeline_state.hpp  processor_base.hpp  processor_context.hpp  processor_instance.hpp  processor_state.hpp  processor_type.hpp  utils.hpp  vicinity.hpp
src/pipeline_extensions/: CMakeLists.txt
src/pipeline_extensions/egress/: keyboard_event_display.cpp  keyboard_event_display.hpp  window_display.cpp  window_display.hpp  window_output.cpp  window_output.hpp
src/pipeline_extensions/ingress/: video_fetcher.cpp  video_fetcher.hpp
src/pipeline_extensions/signals/: lambda_signal.cpp  lambda_signal.hpp  lineage_modifier.cpp  lineage_modifier.hpp  signal_stack.cpp  signal_stack.hpp
src/pipeline_extensions/transform/: color_converter.cpp  color_converter.hpp  flip_image.cpp  flip_image.hpp
src/vc_pipeline/: pipeline.cpp  pipeline_context.cpp  processor_base.cpp  processor_context.cpp  processor_instance.cpp
src/vc_pipeline/include/: pipeline.hpp  pipeline_context.hpp  pipeline_state.hpp  processor_base.hpp  processor_context.hpp  processor_instance.hpp  processor_state.hpp  processor_type.hpp  utils.hpp
test/: CMakeLists.txt  test_LineageModifer.cpp  test_Pipeline.cpp  test_PipelineContext.cpp  test_ProcessorBase.cpp  test_ProcessorContext.cpp  test_ProcessorInstance.cpp  test_mocks.hpp
