add_executable(test_ProcessorBase test_ProcessorBase.cpp)
add_executable(test_ProcessorInstance test_ProcessorInstance.cpp)
add_executable(test_ProcessorContext test_ProcessorContext.cpp)
add_executable(test_PipelineContext test_PipelineContext.cpp)
add_executable(test_Pipeline test_Pipeline.cpp)
add_executable(test_LineageModifier test_LineageModifer.cpp)

target_link_libraries(test_ProcessorBase vic_core ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries(test_ProcessorInstance vic_core ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries(test_ProcessorContext vic_core ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries(test_PipelineContext vic_core ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries(test_Pipeline vic_core ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries(test_LineageModifier vic_core vic_extensions ${OpenCV_LIBS} ${Boost_LIBRARIES})

add_test(ProcessorBase test_ProcessorBase)
add_test(ProcessorInstance test_ProcessorInstance)
add_test(ProcessorContext test_ProcessorContext)
add_test(PipelineContext test_PipelineContext)
add_test(Pipeline test_Pipeline)
add_test(LineageModifier test_LineageModifier)
